forEnersys/nthing Salesforce CPQ/objects/ProcessInput__c.object
<CustomObject>
    <customHelpPage>ProcessInputHelp</customHelpPage>
    <description>Input into a quote process. Information collected by inputs can be used to drive product selection and configuration.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this process input is active.</description>
        <inlineHelpText>Select the checkbox to activate this process input.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BinaryChoice__c</fullName>
        <label>Binary Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConditionsMet__c</fullName>
        <description>Indicates which Process Input conditions must be met.</description>
        <inlineHelpText>Indicate which Process Input conditions must be met.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultField__c</fullName>
        <description>Quote field that sources default value for this input.</description>
        <inlineHelpText>Quote field that sources default value for this input.</inlineHelpText>
        <label>Default Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To Country</fullName>
                </value>
                <value>
                    <fullName>Ship To Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The order that the process input is displayed.</description>
        <inlineHelpText>Enter the order that the process input should be displayed.</inlineHelpText>
        <label>Display Order</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InputField__c</fullName>
        <description>The API name for the field that accepts the user entry.</description>
        <inlineHelpText>Select the API name for the field that accepts the user entry.</inlineHelpText>
        <label>Input Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BinaryChoice__c</fullName>
                </value>
                <value>
                    <fullName>IntegerInput__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntegerInput__c</fullName>
        <inlineHelpText>Enter a numerical value.</inlineHelpText>
        <label>Integer Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Label for this filter.</description>
        <inlineHelpText>The text that you want displayed to the user in the prompt.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>The operator used when comparing the Input Field entry with the Product Field.</description>
        <inlineHelpText>Select the operator to use when comparing the Input Field entry with the Product Field.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProcessInputCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Input Condition</label>
        <referenceTo>ProcessInputCondition__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>ProcessInputCondition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductField__c</fullName>
        <description>Field on Product object used in filtering products that match this input.</description>
        <inlineHelpText>Field on Product object used in filtering products that match this input.</inlineHelpText>
        <label>Product Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Name</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuoteProcess__c</fullName>
        <description>Quote process that owns the input.</description>
        <inlineHelpText>Quote process that owns the input.</inlineHelpText>
        <label>Quote Process</label>
        <referenceTo>QuoteProcess__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Process Input</label>
    <listViews>
        <fullName>All</fullName>
        <columns>DisplayOrder__c</columns>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>InputField__c</columns>
        <columns>ProductField__c</columns>
        <columns>Operator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>